--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@zeit/next-sass": "0.0.9",
     "express": "^4.16.2",
+    "express-graphql": "^0.6.11",
+    "graphql": "^0.13.0",
     "next": "^5.0.0",
     "node-sass": "^4.7.2",
     "react": "^16.2.0",
