--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node server.js",
+    "dev": "node ./server/server.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "start": "NODE_ENV=production node ./server/server.js"
   },
   "author": "Alberto Lopez",
   "license": "ISC",
   "dependencies": {
     "@zeit/next-sass": "0.0.9",
+    "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "express-graphql": "^0.6.11",
     "graphql": "^0.13.0",
+    "mysql": "^2.15.0",
     "next": "^5.0.0",
     "node-sass": "^4.7.2",
     "react": "^16.2.0",
